k8s/apps/prod/canvas/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canvas
  labels:
    name: canvas
