k8s/apps/prod/canvas/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: canvas
  namespace: canvas
subsets:
  - addresses:
      - ip: 10.27.15.133
    ports:
      - name: canvas-port
        protocol: TCP
        port: 80
