k8s/apps/prod/canvas/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: canvas
  namespace: canvas
spec:
  ports:
    - name: canvas-port
      port: 443
      targetPort: 443
      protocol: TCP
