k8s/apps/prod/canvas/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: canvas-ingress
  namespace: canvas
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`canvas.oplabs.us`)
      kind: Rule
      middlewares:
        - name: canvas-headers
          namespace: traefik
        #- name: default-headers
        #  namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: canvas
          port: 443
  tls:
    secretName: oplabs-us-tls
